# cfddns

./: .gitignore  README.md  cfddns.py  cloudflare.py  pyproject.toml
cfddns/: __init__.py  cli.py  cloudflare.py  config.py
tests/: api.py  cfddns.http  ex.py  getip.py  http-client.env.json
